force-app/main/default/objects/DisclosureExternalFunding__c/DisclosureExternalFunding__c.object-meta.xml
<CustomObject>
    <label>Disclosure External Funding</label>
    <nameField>
        <displayFormat>DEF-{00000000}</displayFormat>
        <label>Disclosure External Funding Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Disclosure External Funding</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>