force-app/main/default/objects/DisclosureExternalFunding__c/fields/Award__c.field-meta.xml
<CustomField>
    <fullName>Award__c</fullName>
    <formula>HYPERLINK(&quot;/?sort=&quot; &amp;  IF(
    Award_Id__c == null,
    &quot;Unknown&quot;,
    Award_Id__c
  ), &quot;&quot;, &apos;_self&apos;) &amp; 
HYPERLINK(&quot;/lightning/r/&quot; &amp;  Id &amp; &quot;/view&quot;, IF(
    Award_Id__c == null,
    &quot;Unknown&quot;,
    Award_Id__c
  ), &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Award</label>
    <type>Text</type>
</CustomField>