force-app/main/default/objects/DisclosureExternalFunding__c/fields/Award_Id__c.field-meta.xml
<CustomField>
    <fullName>Award_Id__c</fullName>
    <label>Award Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>