force-app/main/default/objects/DisclosureExternalFunding__c/fields/Award_Title__c.field-meta.xml
<CustomField>
    <fullName>Award_Title__c</fullName>
    <label>Award Title</label>
    <length>225</length>
    <type>Text</type>
</CustomField>