force-app/main/default/objects/DisclosureExternalFunding__c/fields/Disclosure__c.field-meta.xml
<CustomField>
    <fullName>Disclosure__c</fullName>
    <label>Disclosure</label>
    <referenceTo>Disclosure__c</referenceTo>
    <relationshipLabel>Disclosure External Funding</relationshipLabel>
    <relationshipName>DisclosureExternalFunding</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>