force-app/main/default/objects/DisclosureExternalFunding__c/fields/GrantOrContactNumber__c.field-meta.xml
<CustomField>
    <fullName>GrantOrContactNumber__c</fullName>
    <label>Grant or Contract Number</label>
    <length>70</length>
    <type>Text</type>
</CustomField>