force-app/main/default/objects/DisclosureExternalFunding__c/fields/Manual_Name__c.field-meta.xml
<CustomField>
    <fullName>Manual_Name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>