force-app/main/default/objects/DisclosureExternalFunding__c/fields/PI__c.field-meta.xml
<CustomField>
    <fullName>PI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PI (Old)</label>
    <referenceTo>TLO_Contact__c</referenceTo>
    <relationshipLabel>Disclosure External Funding PI OLD</relationshipLabel>
    <relationshipName>DisclosureExternalFundingPiOLD</relationshipName>
    <type>Lookup</type>
</CustomField>