force-app/main/default/objects/DisclosureExternalFunding__c/fields/PI_Acc__c.field-meta.xml
<CustomField>
    <fullName>PI_Acc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PI</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Related Account must be a Person Account.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Person Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Disclosure External Funding PI</relationshipLabel>
    <relationshipName>DisclosureExternalFundingPi</relationshipName>
    <type>Lookup</type>
</CustomField>