force-app/main/default/objects/DisclosureExternalFunding__c/fields/Sponsor_Code__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Code__c</fullName>
    <label>Sponsor Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>